--- a/core/app/views/Shipments/show.html
+++ b/core/app/views/Shipments/show.html
@@ -20,8 +20,6 @@
     <div class="nav-tabs-custom">
       <ul class="nav nav-tabs">
         <li class="active"><a href="#shipmentInfoBtn" data-toggle='tab'>基本信息</a></li>
-        <li><a href="#shipmentDetailBtn" data-toggle='tab'>运输单详情</a></li>
-        <li><a href="#paymentDetailBtn" data-toggle='tab'>请款详情</a></li>
         <li><a href="#fileManagementBtn" data-toggle='tab'>附件管理</a></li>
       </ul>
 
@@ -33,9 +31,7 @@
         #{else }
             #{render './_shipment.html', ship: ship, whouses: whouses, shippers: shippers/}
         #{/else}
-        </div>
 
-        <div class="tab-pane" id="shipmentDetailBtn">
           <div class="box">
           #{render './_show_progress.html', ship: ship/}
           </div>
@@ -43,14 +39,14 @@
 
           <div class="row">
             <div class="col-sm-6">
-              <div class="box">
+              <div class="box box-info">
                 <div class="box-body">
                 #{records_ul records: records, nobr:true/}
                 </div>
               </div>
             </div>
             <div class="col-sm-6">
-              <div class="box">
+              <div class="box box-info">
                 <div class="box-header">
                   <h3 class="box-title">运输进度<i class="icon-sort-down"></i></h3>
                   <a href="@{Shipments.refreshProcuress(ship.id)}" class="btn btn-xs btn-danger" data-method='PUT'>
@@ -72,9 +68,6 @@
               </div>
             </div>
           </div>
-        </div>
-
-        <div class="tab-pane" id="paymentDetailBtn">
         #{render './_paymentunits_v3.html', ship: ship, feeTypes: feeTypes, cooperators: cooperators, isExpress: ship.type==models.procure.Shipment.T.EXPRESS/}
         </div>
 
