--- a/core/app/views/Application/index.html
+++ b/core/app/views/Application/index.html
@@ -13,8 +13,7 @@
       <div class="col-md-3">
         <div id="pieChart1" style="height:300px;"></div>
       </div>
-      <div class="col-md-9" id="totalAjaxUnitDiv" style="height:300px;">
-      </div>
+      <div class="col-md-9" id="totalAjaxUnitDiv" style="height:300px;"></div>
     #{/if}
     #{else }
       <div class="col-md-3">
