修改pageview 访问限制

--- a/core/app/views/Application/index.html
+++ b/core/app/views/Application/index.html
@@ -4,8 +4,10 @@
     #{stylesheet 'bootstrap3/highcharts.css'/}
 #{/set}
 #{set 'moreScripts'}
-    #{script 'bootstrap3/highmaps.js'/}
+    #{script 'bootstrap3/highcharts.js'/}
+    #{script 'bootstrap3/map.js'/}
     #{script 'bootstrap3/world.js'/}
+
     #{script 'Application/app.js'/}
 #{/set}
 
