物流单页面增加开始运输时间

--- a/core/app/views/Shipments/_show_progress.html
+++ b/core/app/views/Shipments/_show_progress.html
@@ -6,7 +6,7 @@
       <li class="stripe">
         <div class="block">
           <label>开始运输时间</label>
-          <span></span>
+          <span>#{time_tooltip time: ship.dates.beginDate/}</span>
         </div>
         <div class="block">
           <label>预计下一阶段时间</label>
