--- a/core/app/views/Analyzes/sid.html
+++ b/core/app/views/Analyzes/sid.html
@@ -41,7 +41,7 @@
       <a href="@{Sellings.selling(dto.fid)}" target="_blank">Selling</a><br/>
       <a href="${dto.asinLink()}" target="_blank">${dto.asin}</a>
     </td>
-    <td>
+    <td style="padding: 0;">
       <div class="flag-wrapper">
         <div class="img-thumbnail flag flag-icon-background ${dto.market?.pic()}"></div>
       </div>
