--- a/core/app/views/ProcureUnits/_unit_list.html
+++ b/core/app/views/ProcureUnits/_unit_list.html
@@ -136,7 +136,7 @@
         #{/if}
       <br>${unit.cooperator?.name}
     </td>
-    <td rel="tooltip" title="${unit.whouse?.name}" style="padding: 0;">
+    <td rel="tooltip" title="${unit.whouse?.name}">
         #{if unit.whouse}
           <div class="flag-wrapper">
             <div class="img-thumbnail flag flag-icon-background ${unit.whouse.market.pic()}"></div>
