--- a/core/app/views/ProcureUnits/_unit_list_v3.html
+++ b/core/app/views/ProcureUnits/_unit_list_v3.html
@@ -134,7 +134,7 @@
         #{/if}
       <br>${unit.cooperator?.name}
     </td>
-    <td data-toggle="tooltip" title="${unit.whouse?.name}" style="padding: 0;">${unit.whouse?.name}</td>
+    <td data-toggle="tooltip" title="${unit.whouse?.name}">${unit.whouse?.name}</td>
     <td #{if unit.attrs.planQty != unit.attrs.qty && (unit.attrs.qty !=0 && unit.attrs.qty)} style="color:red"#{/if}>
     ${unit.attrs.planQty}/${unit.attrs.qty}/${unit.inboundQty}
     </td>
