运输单调整

--- a/core/app/views/Shipments/_shipitem.html
+++ b/core/app/views/Shipments/_shipitem.html
@@ -150,7 +150,7 @@
       #{/power.ck}
   </tr>
   <tr id="${tr_key}_${itm.id}" style="display:none;">
-    <td colspan="20" style="word-break:break-all;"><a id="unitbutton">${itm.unit.sid}</a></td>
+    <td colspan="20"><a id="unitbutton">${itm.unit.sid}</a></td>
   </tr>
 
 #{/list}
