--- a/core/app/views/Shipments/show.html
+++ b/core/app/views/Shipments/show.html
@@ -6,7 +6,8 @@
 #{set 'moreScripts'}
     #{script 'jquery.filedrop.js'/}
     #{script 'component/dropUpload.coffee'/}
-    #{script 'highstock.js'/}
+    #{script 'timeline/timeline_js/timeline-api.js'/}
+    #{script 'analyzes/timeline.coffee'/}
     #{script 'shipments/show.coffee'/}
     #{script 'shipments/show.es6'/}
     #{script 'shipments/paymentunits.coffee'/}
