* 导入采购计划采购单为空处理

--- a/core/app/views/Outbounds/_records.html
+++ b/core/app/views/Outbounds/_records.html
@@ -20,7 +20,7 @@
   <tr class="text-center" id="unit_${r.unit.id}">
     <td><input type="checkbox" value="${r.id}"></td>
     <td>${r.unit.id}</td>
-    <td>${r.unit.deliveryment.id}</td>
+    <td>${r.unit.deliveryment?.id}</td>
     <td>${r.unit.selling?.sellingId}</td>
     <td>${r.unit.sku}</td>
     <td>${r.unit.product.abbreviation}</td>
