--- a/core/app/views/Shipments/_shipment.html
+++ b/core/app/views/Shipments/_shipment.html
@@ -3,10 +3,16 @@
     <div class="box-header with-border"><h3 class="box-title">采购单信息</h3></div>
     <div class="box-body">
       <div class="form-group">
-        <label for="p_sku" class="col-sm-2 control-label">Title (Create
-          By ${ship.creater ? ship.creater.username :"System"})</label>
+        <label for="p_sku" class="col-sm-2 control-label">Title
+          (CreateBy ${ship.creater ? ship.creater.username :"System"})</label>
         <div class="col-sm-5">
           <input name="ship.title" class="form-control" value="${ship.title ? ship.title : ship.title()}">
+        </div>
+        <label class="col-sm-3 control-label">Amazon市场</label>
+        <div class="col-md-1 col-sm-2 col-xs-3 form-inline">
+          <div class="flag-wrapper" style="height:35px; width:50px;">
+            <div class="img-thumbnail flag flag-icon-background ${ship.whouse?.market?.pic()}"></div>
+          </div>
         </div>
       </div>
       <div class="form-group">
