--- a/core/app/views/Sellings/selling.html
+++ b/core/app/views/Sellings/selling.html
@@ -19,7 +19,7 @@
             <i class=" icon-volume-up"></i>&nbsp;&nbsp;温馨提示: &nbsp;Deploy 操作前请先进行 Sync 操作将Amazon的数据同步到系统内.
           </strong>
         </div>
-        <div class="col-md-6" style="text-align:right;">
+        <div class="col-md-6 form-inline" style="text-align:right;">
           SKU:<a href="@{Products.show()}/${s.merchantSKU.split(",")[0]}" style="text-decoration:underline;">${s.merchantSKU.split(",")[0]}</a>&nbsp;
           &nbsp;&nbsp;
           ASIN:<a href="${s.showListingLink()}" target="_blank" style="text-decoration:underline;">${s.asin}</a>&nbsp;&nbsp;&nbsp;
