--- a/core/app/views/ProcureUnits/_unit_list_v3.html
+++ b/core/app/views/ProcureUnits/_unit_list_v3.html
@@ -20,7 +20,7 @@
     <th width="170px;">Selling</th>
     <th width="120px">Sku</th>
     <th width="145px;">FBA-ShipmentId<br>CenterId</th>
-    <th>采购单<br>供应商</th>
+    <th width="100px;">采购单<br>供应商</th>
     <th>去往市场</th>
     <th width="120px;">数量<br>(计划/交货/入库)</th>
     <th>可用库存</th>
