--- a/core/app/views/Application/index.html
+++ b/core/app/views/Application/index.html
@@ -7,7 +7,6 @@
     #{script 'bootstrap3/highcharts.js'/}
     #{script 'bootstrap3/map.js'/}
     #{script 'bootstrap3/world.js'/}
-
     #{script 'Application/app.js'/}
 #{/set}
 
@@ -26,9 +25,7 @@
       <div class="col-md-3">
         <div id="pieChart1" style="height:300px;"></div>
       </div>
-      <div class="col-md-4" id="progress_by_market" style="height:300px;">
-
-      </div>
+      <div class="col-md-4" id="progress_by_market" style="height:300px;"></div>
       <div class="col-md-5" id="ajaxUnitDiv" style="height:300px;">
         <h3>请点击左侧SKU查看最近一个月的销量</h3>
       </div>
