--- a/core/app/views/header.html
+++ b/core/app/views/header.html
@@ -37,6 +37,9 @@
                 #{power.ck "analyzes.index"}
                   <li><a href="@{Analyzes.index()}">销量分析</a></li>
                 #{/power.ck}
+                #{power.ck "analyzes.newindex"}
+                  <li><a href="@{Analyzes.newIndex()}">销量分析(New)</a></li>
+                #{/power.ck}
                 #{power.ck "analyzes.trafficrate"}
                   <li><a href="@{Analyzes.trafficRate()}">Selling 流量转化率统计</a></li>
                 #{/power.ck}
